--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "traverse": "0.6.x",
     "underscore": "1.4.x",
     "aws-lib": "0.1.x",
-    "fiddle": "0.0.x",
+    "fiddle": "*",
     "optimist": "0.3.x",
     "plugin": "0.2.x",
     "structr-step": "0.0.x",
