added http proxy

--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
     "request": "2.12.x",
     "dref": "0.0.x",
     "plugin-express": "0.0.x",
-    "forever-monitor": "1.1.x"
+    "forever-monitor": "1.1.x",
+    "freeport": "1.0.x",
+    "git-stream": "0.0.x",
+    "http-proxy": "0.8.x",
+    "celeri": "0.3.x"
   }
 }
