--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "maestro",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Maestro is a cloud management tool with a mongodb-like feel",
   "main": "./lib/index.js",
   "scripts": {
@@ -38,6 +38,7 @@
     "freeport": "1.0.x",
     "http-proxy": "0.8.x",
     "celeri": "0.3.x",
-    "gumbo": "0.2.x"
+    "gumbo": "0.2.x",
+    "pkgcloud": "0.5.x"
   }
 }
